<resources>
    <string name="app_name">ClickerAndroid</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="log">Log</string>
    <string name="editor">Edit</string>
    <string name="color">Color</string>
    <string name="overlay_not_granted">Overlay permission is NOT granted</string>
    <string name="overlay_granted">Overlay permission is granted</string>
    <string name="btn_open_overlay_settings">Open Overlay Settings</string>
    <string name="btn_run_clicker">Run Clicker</string>
    <string name="script_for_this_screen_didn_t_found">Script for this screen didn\'t found</string>
    <string name="btn_ask_superuser">Get Root</string>
    <string name="telegram">Telegram</string>
    <string name="error_message">Error message: </string>
    <string name="enter_message">Enter message</string>
    <string name="login_message">Login message: </string>
    <string name="chat_id">Chat ID: </string>
    <string name="enter_chatid">Enter chatID</string>
    <string name="bot_token">Bot token: </string>
    <string name="enter_bot_token">Enter bot token</string>
    <string name="animator">Animator</string>
    <string name="show_animation">Show animation</string>
    <string name="root_access_didn_t_granted">Root access didn\'t granted!</string>
    <string name="settings">Settings</string>
    <string name="choose_game">Choose Game!</string>
</resources>