<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/telegram_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/telegram"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_message"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/error_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_message"
                            android:imeOptions="actionDone"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:minWidth="200sp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_message"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_message"
                            android:imeOptions="actionDone"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:minWidth="200sp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat_id"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/chat_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_chatid"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:minWidth="200sp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bot_token"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bot_token"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_bot_token"
                            android:imeOptions="actionDone"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:minWidth="200sp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/telegram_data" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/animator_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animator"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/animation_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_animation"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/animator_text"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/animation_box" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@android:color/transparent"
        android:foreground="@android:drawable/btn_dialog"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
</FrameLayout>